:exclamation: TODO: link to case studies

--- a/views/includes/_post-head-case-study.jade
+++ b/views/includes/_post-head-case-study.jade
@@ -5,7 +5,7 @@
         .col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
           a(
             class='category'
-            href='#'
+            href='/work'
            )
             | Case Study
           h1.page-title= entry.title
