fix footer across layouts and views

--- a/views/_layouts/_default.jade
+++ b/views/_layouts/_default.jade
@@ -13,6 +13,7 @@ include ../includes/_head
 
       block content
   
-    block footer
-      include ../includes/_footer
-      include ../includes/_social-icons.svg
+      block footer
+        .container
+          include ../includes/_footer
+          include ../includes/_social-icons.svg
