--- a/views/_layouts/_video.jade
+++ b/views/_layouts/_video.jade
@@ -19,5 +19,6 @@ include ../includes/_head
       br
       .text-center
         a(href='/work', class='btn-link') Back to All Work
-    include ../includes/_footer
-    include ../includes/_social-icons.svg
+    .container
+      include ../includes/_footer
+  include ../includes/_social-icons.svg
