--- a/views/_layouts/_video.jade
+++ b/views/_layouts/_video.jade
@@ -1,9 +1,11 @@
+include ../mixins/_seo
 include ../mixins/_nav
 include ../mixins/_header
 include ../mixins/_vimeo-player
 
 doctype html
 include ../includes/_ie-conditional-comments
++seo(entry.seoTitle, entry.seoDescription)
 include ../includes/_head
   
   body(id='page-work-single-video')
