--- a/views/includes/_head.jade
+++ b/views/includes/_head.jade
@@ -1,10 +1,7 @@
 head
-  title= _path
   meta(charset='utf8')
   meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-  meta(name='description', content='description of your site')
-  meta(name='author', content= "author of the site")
-  meta(name="viewport" content="width=device-width, initial-scale=1")
+  meta(name='viewport' content='width=device-width, initial-scale=1')
 
   script(src="//use.typekit.net/luy2fpy.js")
   script.
