--- a/views/work.jade
+++ b/views/work.jade
@@ -1,12 +1,15 @@
+- var page = helpers.getPageName(_path)
+include ./mixins/_seo
 include ./mixins/_nav
 include ./mixins/_header
 include ./mixins/_vimeo-player
 
 doctype html
 include ./includes/_ie-conditional-comments
++seo(title, description, page)
 include ./includes/_head
   
-  body(id='work')
+  body(id= page)
     +nav()
     +header('yellow')
     .container
