rename blog category content types

--- a/views/blog/animation.jade
+++ b/views/blog/animation.jade
@@ -10,7 +10,7 @@ block content
     .page-blog-landing
       h2 Animation
       .row
-        - for post in contentful.animation
+        - for post in contentful.animation_category
           .col-md-6
             - var postTitle = post.title
             - var postSubTitle = post.boxTitle
