--- a/views/blog/method.jade
+++ b/views/blog/method.jade
@@ -10,7 +10,7 @@ block content
     .page-blog-landing
       h2 Method
       .row
-        - for post in contentful.method
+        - for post in contentful.method_category
           .col-md-4
             - var postTitle = post.title
             - var postSubTitle = post.boxTitle
