--- a/views/mixins/_color-panel.jade
+++ b/views/mixins/_color-panel.jade
@@ -2,16 +2,16 @@ mixin color-panel(category)
   - var category = category
   case category
     when 'culture'
-      - var postTitle = contentful.culture[0].title
-      - var postSubTitle = contentful.culture[0].boxTitle
-      - var category = contentful.culture[0].category.fields.title
-      - var permalink = contentful.culture[0]._url.replace(/.html$/,"") 
+      - var postTitle = contentful.culture_category[0].title
+      - var postSubTitle = contentful.culture_category[0].boxTitle
+      - var category = contentful.culture_category[0].category.fields.title
+      - var permalink = contentful.culture_category[0]._url.replace(/.html$/,"") 
     when 'animation'
-      - var postTitle = contentful.animation[0].title
-      - var postSubTitle = contentful.animation[0].boxTitle
-      - var category = contentful.animation[0].category.fields.title
-      - var permalink = contentful.animation[0]._url.replace(/.html$/,"") 
-      - var panelImage = contentful.animation[0].imageBox
+      - var postTitle = contentful.animation_category[0].title
+      - var postSubTitle = contentful.animation_category[0].boxTitle
+      - var category = contentful.animation_category[0].category.fields.title
+      - var permalink = contentful.animation_category[0]._url.replace(/.html$/,"") 
+      - var panelImage = contentful.animation_category[0].imageBox
     default
       p Please pass a category to the mixin.
   .panel-common.panel-box-color
