--- a/views/index.jade
+++ b/views/index.jade
@@ -3,8 +3,8 @@ extends ./_layouts/_default
 block content
   .container.content-wrapper
     .content
-      h1 Capture the Human Experience
-      a(href='/work/', class='btn-link') See Our Work
+      h1= contentful.index[0].hero[0].fields.title
+      a(href='/#{contentful.index[0].cta[0].fields.slug}', class='btn-link')= contentful.index[0].cta[0].fields.title
       .bgvid-wrapper
         video(
           autoplay
