scope about page styles by id

--- a/assets/css/_about.scss
+++ b/assets/css/_about.scss
@@ -1,6 +1,4 @@
-
-
-.page-about {
+#about {
 
   .reel {
     margin-top: -269px;
@@ -124,7 +122,7 @@
     }
   }
 
-  .main-content {
+  #content {
     background: #FFF;
     color: #111;
     padding-top: 100px;
