rename case study and video partials

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,8 +34,8 @@ $btn-primary-border: $brand-secondary-red;
 @import "post";
 @import "page";
 @import "terms";
-@import "work_item";
+@import "case_study";
 @import "work_index";
-@import "work_single_video";
+@import "video";
 @import "thanks";
 @import "nav_circle";
