--- a/views/_layouts/_case-study.jade
+++ b/views/_layouts/_case-study.jade
@@ -7,7 +7,7 @@ include ../includes/_ie-conditional-comments
 +seo(entry.seoTitle, entry.seoDescription)
 include ../includes/_head
   
-  body(id='page-work-item')
+  body(id='case-study')
     .master-wrapper
       div(
         class='master parallax'
