--- a/views/_layouts/_video.jade
+++ b/views/_layouts/_video.jade
@@ -8,8 +8,8 @@ include ../includes/_ie-conditional-comments
 +seo(entry.seoTitle, entry.seoDescription)
 include ../includes/_head
   
-  body(id='page-work-single-video')
-    +nav()
+  body(id='video')
+    +nav('video')
     +header('yellow')
     .container.single-video
       +vimeo-player(entry.videoId)
