pass page id to nav mixin

--- a/views/_layouts/_case-study.jade
+++ b/views/_layouts/_case-study.jade
@@ -14,7 +14,7 @@ include ../includes/_head
         data-img-mobile='{{ page.image-mobile }}'
         style='background-image:url(#{asset(entry.masterImage)})'
       )
-        +nav()
+        +nav('case-study')
         +header('yellow')
         include ../includes/_post-head-case-study 
     .content
