--- a/views/_layouts/_default.jade
+++ b/views/_layouts/_default.jade
@@ -9,7 +9,7 @@ include ../includes/_ie-conditional-comments
 include ../includes/_head
 
   body(id= page)
-    +nav()
+    +nav(page)
     .page-wrapper
       block header
         +header('yellow')
