--- a/views/about.jade
+++ b/views/about.jade
@@ -17,7 +17,7 @@ include ./includes/_head
         data-img-mobile='#{contentful.about[0].masterImage.fields.file.url}'
         style='background-image:url(#{contentful.about[0].masterImageSm.fields.file.url})'
       )
-        +nav()
+        +nav(page)
         +header('yellow')
         include ./includes/_page-head
     #content
