--- a/views/thanks.jade
+++ b/views/thanks.jade
@@ -16,7 +16,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
-    +nav()
+    +nav('thanks')
     +header('yellow')
     .container
       .panel-thanks
