--- a/views/work.jade
+++ b/views/work.jade
@@ -10,7 +10,7 @@ include ./includes/_ie-conditional-comments
 include ./includes/_head
   
   body(id= page)
-    +nav()
+    +nav(page)
     +header('yellow')
     .container
       +vimeo-player(140809160)
