grab small screen master img from contentful

--- a/views/_layouts/_post.jade
+++ b/views/_layouts/_post.jade
@@ -13,7 +13,7 @@ include ../includes/_head
     .master-wrapper
       div(
         class='master parallax'
-        data-img-mobile='{{ page.image-mobile }}'
+        data-img-mobile='#{asset(entry.imageMobile)}'
         style='background-image:url(#{asset(entry.image)})'
       )
         +nav()
