fix contact thanks redirect

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -53,7 +53,7 @@ include ./includes/_head
               button.btn.btn-default(type='submit') Send
               input(type='text', name='_gotcha', style='display:none')
               input(type='hidden', name='_subject', value='New Website Inquiry')
-              input(type='hidden', name='_next', value='/contact/thanks')
+              input(type='hidden', name='_next', value='/thanks')
             br.visible-sm.visible-xs
             br.visible-sm.visible-xs
           .col-md-8.col-md-pull-4.col-sm-12.col-xs-12
