remove :phone: number temporarily -- fix #4

--- a/views/contact.jade
+++ b/views/contact.jade
@@ -36,7 +36,7 @@ include ./includes/_head
                 span(itemprop='addressRegion') MD 
                 span(itemprop='postalCode') 21218
               p
-                span(itemprop='telephone') (443) 451 - 7321
+                span(itemprop='telephone')
                 br
                 a(href='mailto:info@earlylightmedia.com', itemprop='email') info@earlylightmedia.com
             h3 Let's talk.
