flip one of the newsletter panels to culture

--- a/views/newsletter.jade
+++ b/views/newsletter.jade
@@ -52,7 +52,7 @@ include ./includes/_head
         .col-md-6
           +img-panel('method')
         .col-md-6
-          +img-panel('gear')
+          +color-panel('culture')
     .container
       include ./includes/_footer
   include ./includes/_social-icons.svg
