--- a/views/_layouts/_post.jade
+++ b/views/_layouts/_post.jade
@@ -25,6 +25,7 @@ include ../includes/_head
           .col-md-8.col-md-offset-2.col-sm-10.col-sm-offset-1
             != marked(entry.content, { renderer: renderer })
             include ../includes/_twitter-post-feedback
+            include ../includes/_newsletter-subscribe
     .container
       include ../includes/_footer
   include ../includes/_social-icons.svg
