--- a/views/contact.jade
+++ b/views/contact.jade
@@ -58,10 +58,11 @@ include ./includes/_head
             br.visible-sm.visible-xs
           .col-md-8.col-md-pull-4.col-sm-12.col-xs-12
             iframe(
+              src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3088.4633308840644!2d-76.56923938506564!3d39.277741732040404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c803f40f700b8d%3A0x1fe6cafe68e25204!2s3500+Boston+St+%23411%2C+Baltimore%2C+MD+21224!5e0!3m2!1sen!2sus!4v1491747905578'
               width='100%'
               height='500px'
               frameborder='0'
-              src='https://a.tiles.mapbox.com/v4/tkraak.m4fa11kn/attribution,zoompan,share.html?access_token=pk.eyJ1IjoidGtyYWFrIiwiYSI6ImtIUlFwWWMifQ.9eGUvqqUbyPiWYSbCx5IBw'
+              style='border:0'
             )
     .container
       include ./includes/_footer
