--- a/views/index.jade
+++ b/views/index.jade
@@ -20,3 +20,11 @@ block content
           )
 
 block footer
+  script(
+    src='http://recognitionmedia-production.s3.amazonaws.com/Content/pv/roadblock.js'
+    data-id='30750'
+    data-url='2017/film-video/branded-entertainment/documentary-branded'
+    data-display-rank='0'
+    data-category='Documentary (Branded)'
+    id='webby-pv-roadblock'
+  )
