update bg vid, add mute attribute

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,13 +9,14 @@ block content
         video(
           autoplay
           loop
+          muted
           class='bgvid'
           poster='/img/home-poster-720.jpg'
         )
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
           <!-- HD 1080p (1920x1080 / 10MB) = profile 119 -->
           source(
-              src='http://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
+              src='https://player.vimeo.com/external/224083936.hd.mp4?s=c593309060dd882f84dcb462f49bbd0fcb6a7a5f&profile_id=175'
               type='video/mp4'
           )
 
