--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,6 +13,7 @@ $brand-primary-yellow: #ffff33; // PANTONE YELLOW 012 RGB 255 255 51 CMYK 6 0 89
 $brand-secondary-red: #ea2626; // PANTONE RED 032 RGB 235 38 38 CMYK 2 97 96 0
 $brand-secondary-gray: #2b2b2b;
 $brand-secondary-black: #525252;
+$brand-secondary-light-gray: #bdbdbd;
 $brand-secondary-white: #ffffff;
 
 // Brand buttons
@@ -40,3 +41,4 @@ $btn-primary-border: $brand-secondary-red;
 @import "thanks";
 @import "newsletter";
 @import "nav_circle";
+@import "media-player";
