--- a/views/index.jade
+++ b/views/index.jade
@@ -10,7 +10,6 @@ block content
           autoplay
           loop
           class='bgvid'
-          poster='/img/home-poster-720.jpg'
         )
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
           <!-- HD 1080p (1920x1080 / 10MB) = profile 119 -->
@@ -18,4 +17,154 @@ block content
               src='http://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
               type='video/mp4'
           )
-block footer
+
+  main
+    section#media-player.is-hidden
+      .media-player__wrapper
+        .media-player__btn-close
+        .media-player__panel
+          iframe(id='iframe' src='' allowfullscreen='allowfullscreen')
+
+    section.media-gallery
+      h2.h1.media-gallery__h2 Inspiring people through film is our super power
+      p.media-gallery__copy Our Documentary Style Paired With Earth-Shaking Brands Creates Instant Emotional Attachment And Massive Exposure
+      .media-gallery__grid-wrap
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='216914992')
+            h3.panel__title Annie E. Casey Foundation
+            h3.panel__title.panel__title--secondary De'Jon's Story
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='215881821')
+            h3.panel__title Microsoft
+            h3.panel__title.panel__title--secondary Zach's story
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='187359744')
+            h3.panel__title Severn School
+            h3.panel__title.panel__title--secondary We Are Severn
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='144040577')
+            h3.panel__title Loyola University
+            h3.panel__title.panel__title--secondary Strong Truths Well Lived
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='184702405')
+            h3.panel__title Throw
+            h3.panel__title.panel__title--secondary feat. Coffin Nachtmahr
+
+        .media-gallery__panel
+          .panel__anchor(data-vimeo='203945907')
+            h3.panel__title D.C. United
+            h3.panel__title.panel__title--secondary Introducing Audi Field
+
+    section.awards.flex
+      .awards__flex-wrapper.flex-wrapper
+        .award-panel.flex
+          // figure.award-panel__figure
+          img.award-panel__img(src='/img/Emmy-Award-Stencil-thumb.png')
+          p.h1.award-panel__counter(data-total='51') 51
+
+
+        .award-panel.flex
+          // figure.award-panel__figure
+          img.award-panel__img(src='/img/addy-black.png')
+          p.h1.award-panel__counter(data-total='8') 8
+
+    section.process
+
+      h2.h1.process__h2 Global team or local agency, we'll build your story together
+
+
+      .process__grid-wrapper.flex-wrapper
+
+        .graphic
+          svg.process-quad(data-order='0' id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 196.93 196.93")
+            title elm-process-quad
+            path.cls-1(d="M32.92,196.93a184,184,0,0,1,164-161.77V0C92.32,9,9,92.32,0,196.93Z")
+          svg.process-quad(data-order='1' id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 196.93 196.93")
+            title elm-process-quad
+            path.cls-1(d="M32.92,196.93a184,184,0,0,1,164-161.77V0C92.32,9,9,92.32,0,196.93Z")
+          svg.process-quad(data-order='3' id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 196.93 196.93")
+            title elm-process-quad
+            path.cls-1(d="M32.92,196.93a184,184,0,0,1,164-161.77V0C92.32,9,9,92.32,0,196.93Z")
+          svg.process-quad(data-order='2' id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 196.93 196.93")
+            title elm-process-quad
+            path.cls-1(d="M32.92,196.93a184,184,0,0,1,164-161.77V0C92.32,9,9,92.32,0,196.93Z")
+          // include(src='/includes/_elm-process-quad.sgr' data-order='0')
+          // include(src='/includes/_elm-process-quad.sgr' data-order='1')
+          // include(src='/includes/_elm-process-quad.sgr' data-order='2')
+          // include(src='/includes/_elm-process-quad.sgr' data-order='3')
+          // include(src='/includes/_elm-process-circle.sgr')
+
+        .process__panel(data-order='0')
+          h3.h3.process__panel-header Ad Agencies
+          p.process__panel-content Your ideas, our execution. We’ll develop a detailed treatment on how to best execute your vision through a highly collaborative process.
+
+        .process__panel(data-order='1')
+          h3.h3.process__panel-header Direct to Business
+          p.process__panel-content Content strategy and creative treatments for teams who build their brands in house, but sometimes need to bring in the experts to get more done.
+
+        .process__panel(data-order='3')
+          h3.h3.process__panel-header Non-Profit World
+          p.process__panel-content We help the world’s do-gooders do good, working within the constraints of the public sector to tell the world’s most heartfelt and compelling stories.
+
+        .process__panel(data-order='2')
+          h3.h3.process__panel-header Editorial
+          p.process__panel-content We work with investors, journalism outlets, and independent teams to tell stories that are impactful, balanced, and people-driven.
+
+    section.clients
+      h2.clients__header Friends of ELM
+
+      .clients__flex-wrapper
+        .clients__figure
+          img(src='/img/client-logos/Microsoft-logo_rgb_c-grey-140.png')
+        .clients__figure
+          img(src='/img/client-logos/MCCANN-grey-90.jpg')
+        .clients__figure
+          img(src='/img/client-logos/UA-grey-128.png')
+        .clients__figure
+          img(src='/img/client-logos/audi-cars-logo-emblem-grey-120.jpg')
+        .clients__figure
+          img(src='/img/client-logos/AECF-grey-128.jpg')
+        .clients__figure
+          img(src='/img/client-logos/JHU-grey-134.png')
+        .clients__figure
+          img(src='/img/client-logos/NG-grey-140.png')
+        .clients__figure
+          img(src='/img/client-logos/DISCOVERY-CHANNEL-grey-140.png')
+        .clients__figure
+          img(src='/img/client-logos/primary-signature-grey-90.jpg')
+        .clients__figure
+          img(src='/img/client-logos/UMMC-grey-140.png')
+        .clients__figure
+          img(src='/img/client-logos/usnaaa-logo-200x200-grey.png')
+        .clients__figure
+          img(src='/img/client-logos/Visit_Baltimore_Logo_Vertical-grey-120.png')
+        .clients__figure
+          img(src='/img/client-logos/WEINBERG-Logo-Stacked.png')
+        .clients__figure
+          img(src='/img/client-logos/aspire-logo-inverse-grey-128.png')
+        .clients__figure
+          img(src='/img/client-logos/ASTRA-ZENECA-grey-140.png')
+        .clients__figure
+          img(src='/img/client-logos/Best-grey-100.png')
+        // .clients__figure
+          // img(src='/img/client-logos/BOSTON-CHILDRENS-HOSPITAL-.png')
+        .clients__figure
+          img(src='/img/client-logos/CAPE-COD-grey-100.jpg')
+        .clients__figure
+          img(src='/img/client-logos/DCU-grey-80.png')
+        .clients__figure
+          img(src='/img/client-logos/gkv_2012_logo-grey-87.png')
+        .clients__figure
+          img(src='/img/client-logos/PANDORA-grey-140.png')
+
+    section.contact
+      .contact__hero
+        a.btn.contact__cta(href='#') contact us
+        
+    script(src='/js/media-player.js' type='text/javascript')
+    script(src='/js/process-graphic.js' type='text/javascript')
