--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,4 +1,5 @@
 #index {
+  background-color: $brand-secondary-white;
 
   nav {
 
@@ -26,6 +27,18 @@
 
     @media only screen and (max-width: 600px) {
       min-height: 700vh;
+    }
+
+    @media only screen and (min-width: 1280px) and (max-width: 1380px) {
+      min-height: 530vh;
+    }
+
+    @media only screen and (min-width: 2000px) {
+      min-height: 510vh;
+    }
+
+    @media only screen and (min-width: 2300px) {
+      min-height: 515vh;
     }
 
     .container {
@@ -366,13 +379,15 @@ main {
 
       svg {
         flex: 1 1 auto;
+        height: 12rem;
         padding: 1rem;
         pointer: cursor;
         transition: transform 250ms ease;
         width: 12rem;
 
         @media screen and (max-width: 484px) {
-          padding: .5rem;
+          height: 8rem;
+          padding: 0 .5rem;
           width: 8rem;
         }
 
