--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block content
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
           <!-- HD 1080p (1920x1080 / 10MB) = profile 119 -->
           source(
-              src='http://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
+              src='https://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
               type='video/mp4'
           )
 
