add muted to bg video

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@ block content
         video(
           autoplay
           loop
+          muted
           class='bgvid'
         )
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
