--- a/views/index.jade
+++ b/views/index.jade
@@ -1,4 +1,4 @@
-extends ./_layouts/_default
+extends ./_layouts/_default-no-page-wrap
 
 block content
   .container.content-wrapper
@@ -18,6 +18,7 @@ block content
               src='https://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
               type='video/mp4'
           )
+  .span.scrolltomain
 
   main
     section#media-player.is-hidden
