--- a/views/index.jade
+++ b/views/index.jade
@@ -15,7 +15,7 @@ block content
           <!-- HD 720p (1280x720 / 4MB) = profile 113 -->
           <!-- HD 1080p (1920x1080 / 10MB) = profile 119 -->
           source(
-              src='https://player.vimeo.com/external/127081550.hd.mp4?s=69fb39f69e6917bbf479235687a33f23&profile_id=113'
+              src='https://player.vimeo.com/external/275307465.hd.mp4?s=d71b00bcce5febe3e6df7e17b12da2f04275ed81&profile_id=175'
               type='video/mp4'
           )
   .span.scrolltomain
@@ -29,7 +29,7 @@ block content
 
     section.media-gallery
       h2.h1.media-gallery__h2 Inspiring people through film is our super power
-      p.media-gallery__copy Our Documentary Style Paired With Earth-Shaking Brands Creates Instant Emotional Attachment And Massive Exposure
+      p.media-gallery__copy Our Documentary Style Paired With Earth-Shaking Brands Creates Emotional Attachment, A Recipe For Deep Impact 
       .media-gallery__grid-wrap
 
         .media-gallery__panel
@@ -60,7 +60,7 @@ block content
         .media-gallery__panel
           .panel__anchor(data-vimeo='278196574')
             h3.panel__title D.C. United
-            h3.panel__title.panel__title--secondary Introducing Audi Field
+            h3.panel__title.panel__title--secondary A Legendary Reveal
 
     section.awards.flex
       .awards__flex-wrapper.flex-wrapper
