fix Throw video link

--- a/views/index.jade
+++ b/views/index.jade
@@ -53,7 +53,7 @@ block content
             h3.panel__title.panel__title--secondary Strong Truths Well Lived
 
         .media-gallery__panel
-          .panel__anchor(data-vimeo='')
+          .panel__anchor(data-vimeo='184009588')
             h3.panel__title Throw
             h3.panel__title.panel__title--secondary feat. Coffin Nachtmahr
 
