--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -174,8 +174,11 @@ main {
   }
 
   .media-gallery__panel {
-    width: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     position: relative;
+    width: 100%;
 
     &:before {
       content: '';
@@ -240,35 +243,35 @@ main {
       }
     }
 
-    &:nth-of-type(1) {
-      background: url("//images.ctfassets.net/1ipf5oqx1rxu/7lrWaTnqlUu4sok0IoQWay/fe18168ff0c4d5982271074ebf8ecdf7/De_Jon-1.jpg") no-repeat center center;
-      background-size: cover;
-    }
+    // &:nth-of-type(1) {
+    //   background: url("//images.ctfassets.net/1ipf5oqx1rxu/7lrWaTnqlUu4sok0IoQWay/fe18168ff0c4d5982271074ebf8ecdf7/De_Jon-1.jpg") no-repeat center center;
+    //   background-size: cover;
+    // }
 
-    &:nth-of-type(2) {
-      background: url("/img/microsoft.jpg") no-repeat center center;
-      background-size: cover;
-    }
+    // &:nth-of-type(2) {
+    //   background: url("/img/microsoft.jpg") no-repeat center center;
+    //   background-size: cover;
+    // }
 
-    &:nth-of-type(3) {
-      background: url("//images.ctfassets.net/1ipf5oqx1rxu/2u1m6FuhYYeAmKQO22oUGi/79aba7b7af9942131de466090b4df19b/severn_thumbnail.jpg");
-      background-size: cover;
-    }
+    // &:nth-of-type(3) {
+    //   background: url("//images.ctfassets.net/1ipf5oqx1rxu/2u1m6FuhYYeAmKQO22oUGi/79aba7b7af9942131de466090b4df19b/severn_thumbnail.jpg");
+    //   background-size: cover;
+    // }
 
-    &:nth-of-type(4) {
-      background: url('//images.ctfassets.net/1ipf5oqx1rxu/XCIH0Kv406Smggu2gwC0e/8e46048c61c7bc37352bfe6d685c9535/loyola-institutional.jpg');
-      background-size: cover;
-    }
+    // &:nth-of-type(4) {
+    //   background: url('//images.ctfassets.net/1ipf5oqx1rxu/XCIH0Kv406Smggu2gwC0e/8e46048c61c7bc37352bfe6d685c9535/loyola-institutional.jpg');
+    //   background-size: cover;
+    // }
 
-    &:nth-of-type(5) {
-      background: url('/img/throw-trailer.jpg');
-      background-size: cover;
-    }
+    // &:nth-of-type(5) {
+    //   background: url('/img/throw-trailer.jpg');
+    //   background-size: cover;
+    // }
 
-    &:nth-of-type(6) {
-      background: url('/img/rooney-reveal.jpg');
-      background-size: cover;
-    }
+    // &:nth-of-type(6) {
+    //   background: url('/img/rooney-reveal.jpg');
+    //   background-size: cover;
+    // }
   }
 
   .awards {
