--- a/views/index.jade
+++ b/views/index.jade
@@ -133,7 +133,7 @@ block content
 
     section.contact
       .contact__hero
-        a.btn.contact__cta(href='#') contact us
+        a.btn.contact__cta(href='/contact') contact us
         
     script(src='/js/media-player.js' type='text/javascript')
     script(src='/js/process-graphic.js' type='text/javascript')
